--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-Session==0.5.0
 SQLAlchemy==2.0.23
-psycopg2==2.9.9
+psycopg2-binary
 requests==2.31.0
 APScheduler==3.10.4
 python-dotenv==1.0.0
