--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask==3.0.0
-Flask-SQLAlchemy
-Flask-Session==0.5.0
-SQLAlchemy==2.1.5
-psycopg2-binary
-requests==2.31.0
-APScheduler==3.10.4
-python-dotenv==1.0.0
+Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-Session
+SQLAlchemy
+psycopg2-binary==2.9.11
+requests
+APScheduler
+python-dotenv
 gunicorn==21.2.0
