--- a/k8s/postgresql-deployment.yaml
+++ b/k8s/postgresql-deployment.yaml
@@ -23,7 +23,10 @@ spec:
         - name: POSTGRES_USER
           value: "user"
         - name: POSTGRES_PASSWORD
-          value: "password"
+          valueFrom:
+            secretKeyRef:
+              name: alertservice-secret
+              key: POSTGRES_PASSWORD
         - name: POSTGRES_DB
           value: "crypto_tracker"
         volumeMounts:
