fixed secret key (must be same everywhere)

--- a/k8s/alertservice-secret.yaml
+++ b/k8s/alertservice-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: alertservice-secret
 type: Opaque
 data:
-  SECRET_KEY: YWxlcnRfc2VydmljZV9zZWNyZXQ=  # base64 encoded "alert_service_secret"
+  SECRET_KEY: Y3J5cHRvX3RyYWNrZXJfc3VwZXJfc2VjcmV0X2tleQ==  # base64 encoded "crypto_tracker_super_secret_key"
   POSTGRES_PASSWORD: YWxlcnRwYXNz  # base64 encoded "alertpass"
