--- a/k8s/alertservice-secret.yaml
+++ b/k8s/alertservice-secret.yaml
@@ -6,3 +6,8 @@ type: Opaque
 data:
   SECRET_KEY: Y3J5cHRvX3RyYWNrZXJfc3VwZXJfc2VjcmV0X2tleQ==  # base64 encoded "crypto_tracker_super_secret_key"
   POSTGRES_PASSWORD: YWxlcnRwYXNz  # base64 encoded "alertpass"
+  MAIL_SERVER: c210cC1yZWxheS5icmV2by5jb20=  # base64 encoded "smtp.gmail.com" - CHANGE THIS
+  MAIL_PORT: NTg3  # base64 encoded "587" - CHANGE IF NEEDED
+  MAIL_USE_TLS: VHJ1ZQ==  # base64 encoded "True"
+  MAIL_USERNAME: OWY5ZWIyMDAxQHNtdHAtYnJldm8uY29t  # base64 encoded "your-email@gmail.com" - CHANGE THIS
+  MAIL_PASSWORD: bTZOZjVyT0FweEduMDJjUg== # base64 encoded "your-app-specific-password" - CHANGE THIS
