--- a/k8s/alertservice-deployment.yaml
+++ b/k8s/alertservice-deployment.yaml
@@ -45,6 +45,18 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
+        livenessProbe:
+          httpGet:
+            path: /ready
+            port: 5000
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 5000
+          initialDelaySeconds: 10
+          periodSeconds: 5
         env:
         - name: FLASK_ENV
           valueFrom:
