--- a/.github/workflows/build-and-push-acr.yml
+++ b/.github/workflows/build-and-push-acr.yml
@@ -22,9 +22,10 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
+        working-directory: alert-service
         run: |
           python -m pip install --upgrade pip
-          pip install -r alert-service/requirements.txt
+          pip install -r requirements.txt
 
       - name: Run tests
         working-directory: alert-service
