--- a/.github/workflows/build-and-push-acr.yml
+++ b/.github/workflows/build-and-push-acr.yml
@@ -23,12 +23,14 @@ jobs:
 
       - name: Install dependencies
         run: |
+          cd alert-service
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run tests
         run: |
-          pytest tests/ -v --tb=short
+          cd alert-service
+          PYTHONPATH="${PYTHONPATH}:$(pwd)" pytest tests/ -v --tb=short
 
   build-and-push:
     needs: test
